Fix extra part sticking out from folders

--- a/phoenix-bundle/base.css
+++ b/phoenix-bundle/base.css
@@ -1248,6 +1248,7 @@ border-color: 2px dashed rgba(255, 255, 255, .1);
   height: 100%;
   width: 100%;
   background-color: var(--main-color);
+  border-radius: var(--roundness);
   opacity: .2;
   transition: all 200ms ease-in-out;
 }
